[gd_scene load_steps=4 format=2]

[ext_resource path="res://pebble.png" type="Texture" id=1]
[ext_resource path="res://Pebble_Ammo.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.07588, 1.95825 )

[node name="Pebble_Ammo" type="KinematicBody2D"]
visible = false
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.612493 )
shape = SubResource( 1 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="DeathTimer" type="Timer" parent="."]
autostart = true

[node name="CollisionsEnabledTimer" type="Timer" parent="."]
wait_time = 0.45
one_shot = true
autostart = true

[node name="LastTimerISwear" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true
[connection signal="timeout" from="DeathTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="CollisionsEnabledTimer" to="." method="_on_CollisionsEnabledTimer_timeout"]
[connection signal="timeout" from="LastTimerISwear" to="." method="_on_LastTimerISwear_timeout"]
